k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remotecall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remotecall
  template:
    metadata:
      labels:
        app: remotecall
    spec:
      containers:
      - name: remotecall
        image: ohtom/remotecallservice:0.1
        ports:
        - containerPort: 9080
