k8s-manifests/kaniko-local-git.yaml
apiVersion: v1
kind: Pod
metadata:
  name: remotecall-git
spec:
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args:
    - --dockerfile=/dockerfile
    - --context=git://github.com/0ht/remoteCallService.git#refs/heads/master
    - --destination=ohtom/remotecallservice:test
    volumeMounts:
      - name: kaniko-secret
        mountPath: /root
  restartPolicy: Never
  volumes:
    - name: kaniko-secret
      secret:
        secretName: regcred
        items:
        - key: .dockerconfigjson
          path: .docker/config.
