k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: remotecall
spec:
  type: ClusterIP
  selector:
    app: remotecall
  ports:
  - name: remotecall
    port: 9080
    targetPort: 9080
    protocol: TCP
