k8s-manifests/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: remotecall
spec:
  hosts:
  - "*"
  gateways:
  - remotecall-gateway
  http:
  - match:
    - uri:
        prefix: /remoteCallService
    route:
    - destination:
        host: remotecall
        port:
          number: 9080
